  and to "minLength" and "maxLength" of "bytesType", stating that it's an error
  if there's a contradiction.
* Added an "unspecifiedValues" field to "bitFieldType".
* Added "notes" to "labeledIntegerType".
* TODO: How to do optional fields, for example in CAPTURE_PRESET?
* All kinds of changes to current messages plus new example messages. All the
  E1.20 messages are included plus one from E1.37-1, IDENTIFY_MODE.

v20:
* Added labelled values to PRODUCT_DETAIL_ID_LIST.
* Replaced "prefix" with "prefixPower" in "integerType" and also changed its
  meaning to the power of 10 instead of a value from Table A-14 of E1.20.
* Renamed "unit" to "units" in "integerType".
* Updated DMX_FAIL_MODE, DMX_STARTUP_MODE, and CAPTURE_PRESET examples to use
  the new "units" and "prefixPower" fields for their times.
* Changed the product category to a single field in the DEVICE_INFO example and
  added some labels.
* Removed obvious label prefixes from: LAMP_ON_MODE, POWER_STATE,
  PRESET_PLAYBACK, and PRODUCT_DETAIL_ID_LIST.
* New E1.37-1 examples.

v21:
* Fixed "restrictToLabeled" description by removing an extraneous "the".
* Removed the "different_pid" option from "get_response" because that's a
  special case and not meant for manufacturer PIDs.
* Added "labels" to "booleanType" and a new "labeledBooleanType".
* Changed these examples to use "boolean" with some labels instead of "uint8"
  with two labeled false and true values: IDENTIFY_DEVICE, PAN_INVERT,
  PAN_TILT_SWAP, TILT_INVERT.
* Added labels to "unit" and "unit_prefix" in PARAMETER_DESCRIPTION and
  SENSOR_DEFINITION.
* Fixed "unit_prefix" type so that it's "uint8" instead of "uint16"
  in PARAMETER_DESCRIPTION.
* Added a "prefixBase" to "integerType". It has 10 as a default.
* Finished adding all the E1.37-1 messages to the examples.
* Setting all "additionalProperties" to false for every defined object.
* Fixed "properties" spelling in "refType".