@@ -12,7 +12,7 @@
         "name": "language_code",
         "type": "string",
         "pattern": "^[a-zA-Z]{2}$",
-        "reference": "https://en.wikipedia.org/wiki/ISO_639-1",
+        "references": [ "https://en.wikipedia.org/wiki/ISO_639-1" ],
         "minLength": 2,
         "maxLength": 2
       }
