@@ -1,17 +1,17 @@
 {
-  "name": "LANGUAGE",
-  "pid": 176,
+  "name": "DNS_DOMAIN_NAME",
+  "notes": "E1.37-2",
+  "pid": 1805,
   "version": 1,
   "get_request_subdevice_range": [ "root", "subdevices" ],
   "get_request": [],
   "get_response": [
     {
-      "name": "language_code",
+      "name": "domain_name",
       "type": "string",
-      "pattern": "^[a-zA-Z]{2}$",
-      "references": [ "https://en.wikipedia.org/wiki/ISO_639-1" ],
-      "minLength": 2,
-      "maxLength": 2
+      "references": [ "https://tools.ietf.org/html/rfc2181#section-11" ],
+      "format": "domain-name",
+      "maxLength": 231
     }
   ],
   "set_request_subdevice_range": [ "root", "subdevices", "broadcast" ],
