@@ -1,0 +1,34 @@
+{
+  "name": "DNS_IPV4_NAMESERVER",
+  "notes": "E1.37-2",
+  "pid": 1803,
+  "version": 1,
+  "get_request_subdevice_range": [ "root", "subdevices" ],
+  "get_request": [
+    {
+      "name": "index",
+      "type": "uint8",
+      "ranges": [
+        { "minimum": 0,  "maximum": 2 }
+      ]
+    }
+  ],
+  "get_response": [
+    {
+      "name": "index",
+      "type": "uint8",
+      "ranges": [
+        { "minimum": 0,  "maximum": 2 }
+      ]
+    },
+    {
+      "name": "address",
+      "type": "bytes",
+      "notes": "All zeros means IPV4_UNCONFIGURED.",
+      "format": "ipv4"
+    }
+  ],
+  "set_request_subdevice_range": [ "root", "subdevices", "broadcast" ],
+  "set_request": "get_response",
+  "set_response": []
+}
