@@ -1,0 +1,17 @@
+{
+  "name": "INTERFACE_APPLY_CONFIGURATION",
+  "notes": "E1.37-2",
+  "pid": 1781,
+  "version": 1,
+  "set_request_subdevice_range": [ "root", "subdevices", "broadcast" ],
+  "set_request": [
+    {
+      "name": "id",
+      "type": "uint32",
+      "ranges": [
+        { "minimum": 1, "maximum": 4294967040 }
+      ]
+    }
+  ],
+  "set_response": []
+}
