@@ -1,0 +1,36 @@
+{
+  "name": "IPV4_ZEROCONF_MODE",
+  "notes": "E1.37-2",
+  "pid": 1796,
+  "version": 1,
+  "get_request_subdevice_range": [ "root", "subdevices" ],
+  "get_request": [
+    {
+      "name": "id",
+      "type": "uint32",
+      "ranges": [
+        { "minimum": 1, "maximum": 4294967040 }
+      ]
+    }
+  ],
+  "get_response": [
+    {
+      "name": "id",
+      "type": "uint32",
+      "ranges": [
+        { "minimum": 1, "maximum": 4294967040 }
+      ]
+    },
+    {
+      "name": "mode",
+      "type": "boolean",
+      "labels": [
+        { "label": "Disabled", "value": false },
+        { "label": "Enabled", "value": true }
+      ]
+    }
+  ],
+  "set_request_subdevice_range": [ "root", "subdevices", "broadcast" ],
+  "set_request": "get_response",
+  "set_response": []
+}
